2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/16_assign_valide.deca
// Description :
//  Test sur des afféctations valides 
// Resultats :
//    Valide 
//
// Historique :
// cree le 11/01/2024

{
    int x ; 
    boolean b ; 
    float f ;

    x = 2 ;
    b = true ;
    f = 12.5 ;
}