2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/52_float_lit_aff_bool.deca
// Description :
//     affécatation flaot dans un boolean 
// Resultats :
//    Erreur Contexteulle : ligne 10 : le float ne peut pas être affecté à boolean
//
// Historique :
// cree le 10/01/2024

{
    boolean b = 12.34;
}